**put DESC/ASC after COLLATE section, not before (needed at least for sqlite driver)
**fixed crash because of invalid deletion order of query structures
**fixed crash because of invalid deletion relationship structures
CCBUG:298197
*Krazy fixes: removed 'const' refs in public classes [constref]
*Finally removed the libpqxx-based driver, libpq-based one is now official

2012-06-25..26
SQLite Driver
*Add KexiDB fix: Ported database compacting code to Predicate that uses system SQLite
**(2012-02-02 calligra master commit 42ffb1c08d74b)
CCBUG:293548
TODO: SQLite Vacuum not tested (but predicate_sqlite3_dump works)
TODO: add test for SQLite Vacuum
*Add KexiDB fix: Allow to cancel database compacting; remove temp. file if needed
**(2012-03-02 calligra master commit d4d64077d66)
*Add KexiDB fix: Fixed crashes when compacting database fails
**(2012-03-07 calligra master commit 5cdecef8bfe)
*Add KexiDB fix: Fixed error when compacting db opened from recent lists
**(2012-03-07 calligra master commit 9ec3e68ff43)
MySQL Driver
*Add KexiDB fix: Fixed crash in prepared statement execution for inserting data when number of items to insert is smaller than expected; this case could be found when importing CSV data in Kexi with fewer columns specified than expected
**(2012-03-07 calligra master commit 7661374b40c)
CCBUG:279980
CCBUG:254068
PostgreSQL Driver
*Add KexiDB fix: Fixed crash when inserting incomplete rows
**(2012-03-07 calligra master commit 38da0b59e08)
CCBUG:279980
CCBUG:254068

2012-06-20
Predicate
*Add KexiDB fix: Query SQL generated in the Query Designer should be of KEXISQL type
**(2012-01-02 calligra master commit 1072a0f5d)
CCBUG:290354
*Add KexiDB fix: Clean up #includes: use the same style for Qt everywhere, e.g. #include <QObject> instead of #include <qobject.h>
SQLite Driver