@@ -722,7 +722,7 @@ struct Predicate_BuiltinFieldProperties {
         ADD("name");
         ADD("caption");
         ADD("description");
-        ADD("length");
+        ADD("maxLength");
         ADD("precision");
         ADD("defaultValue");
         ADD("width");
@@ -787,8 +787,8 @@ bool Predicate::setFieldProperties(Field& field, const QHash<QByteArray, QVarian
         field.setCaption((*it).toString());
     if ((it = values.find("description")) != values.constEnd())
         field.setDescription((*it).toString());
-    if ((it = values.find("length")) != values.constEnd())
-        field.setLength((*it).isNull() ? 0/*default*/ : (*it).toUInt(&ok));
+    if ((it = values.find("maxLength")) != values.constEnd())
+        field.setMaxLength((*it).isNull() ? 0/*default*/ : (*it).toUInt(&ok));
     if (!ok)
         return false;
     if ((it = values.find("precision")) != values.constEnd())
@@ -923,8 +923,8 @@ bool Predicate::setFieldProperty(Field& field, const QByteArray& propertyName, c
             field.setDescription(value.toString());
             return true;
         }
-        if ("length" == propertyName)
-            GET_INT(setLength);
+        if ("maxLength" == propertyName)
+            GET_INT(setMaxLength);
         if ("precision" == propertyName)
             GET_INT(setPrecision);
         if ("defaultValue" == propertyName) {
